--- a/index.html
+++ b/index.html
@@ -1,18 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Recipe Page</title>
 </head>
+
 <body>
     <main>
         <div class="recipe-card">
-            <div class="food-image">
-                <img src="assets/top-image.png">
+            <div class="container">
+                <div class="food-image">
+                    <img src="assets/top-image.png">
+                </div>
+                <div class="recipe-name">
+                    <h1>Simple Omelette Recipe</h1>
+                    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+                        to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+                </div>
+                <div class="preparation-card">
+                    <h3>Preparation time</h3>
+                    <ul>
+                        <li>Total: Approximately 10 minutes</li>
+                        <li>Preparation: 5 minutes</li>
+                        <li>Cooking: 5 minutes</li>
+                    </ul>
+                </div>
+                <div class="ingredients">
+                    <h2>Ingredients</h2>
+                    <ul>
+                        <li>Salt, to taste</li>
+                        <li>Pepper, to taste</li>
+                        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                    </ul>
+                </div>
+                <hr width="100%" size="1">
+                <h2>Instructions</h2>
+                <ol>
+                    <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are
+                        well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+                    <li><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+                    <li><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
+                        to ensure the eggs evenly coat the surface.</li>
+                    <li><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly
+                        runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+                    <li><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it
+                        over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+                    <li><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</li>
+                </ol>
+                <hr width="100%" size="1">
+                <h2>Nutrition</h2>
+                <p>The table below shows nutritional values per serving without the additional fillings.</p>
+                <table>
+                    <tr>
+                        <td>Calories</td>
+                        <td>277kcal</td>
+                    </tr>
+                    <tr>
+                        <td>Carbs</td>
+                        <td>0g</td>
+                    </tr>
+                    <tr>
+                        <td>Protein</td>
+                        <td>20g</td>
+                    </tr>
+                    <tr>
+                        <td>Fat</td>
+                        <td>22g</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </main>
 </body>
+
 </html>
