--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap"
+        rel="stylesheet">
     <title>Recipe Page</title>
 </head>
 
@@ -16,39 +21,44 @@
                     <img src="assets/top-image.png">
                 </div>
                 <div class="recipe-name">
-                    <h1>Simple Omelette Recipe</h1>
-                    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+                    <h1 class="title-recipe">Simple Omelette Recipe</h1>
+                    <p class="description-recipe">An easy and quick dish, perfect for any meal. This classic omelette
+                        combines beaten eggs cooked
                         to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
                 </div>
                 <div class="preparation-card">
-                    <h3>Preparation time</h3>
-                    <ul>
-                        <li>Total: Approximately 10 minutes</li>
-                        <li>Preparation: 5 minutes</li>
-                        <li>Cooking: 5 minutes</li>
-                    </ul>
+                    <div class="preparation-details">
+                        <h3 class="preparation-title">Preparation time</h3>
+                        <ul class="bullet-preparation">
+                            <li><span><b>Total:</b> Approximately 10 minutes</span></li>
+                            <li><span><b>Preparation:</b> 5 minutes</span></li>
+                            <li><span><b>Cooking:</b> 5 minutes</span></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="ingredients">
-                    <h2>Ingredients</h2>
-                    <ul>
-                        <li>Salt, to taste</li>
-                        <li>Pepper, to taste</li>
-                        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                    <h2 class="ingredients-title">Ingredients</h2>
+                    <ul class="bullet-ingredients">
+                        <li><span>2-3 large eggs</span></li>
+                        <li><span>Salt, to taste</span></li>
+                        <li><span>Pepper, to taste</span></li>
+                        <li><span>1 tablespoon of butter or oil</span></li>
+                        <li><span>Optional fillings: cheese, diced vegetables, cooked meats, herbs</span></li>
                     </ul>
                 </div>
                 <hr width="100%" size="1">
-                <h2>Instructions</h2>
+                <h2 class="instruction-title">Instructions</h2>
                 <ol>
-                    <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are
-                        well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-                    <li><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-                    <li><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
-                        to ensure the eggs evenly coat the surface.</li>
-                    <li><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly
-                        runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-                    <li><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it
-                        over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-                    <li><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</li>
+                    <li><span><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are
+                        well mixed. You can add a tablespoon of water or milk for a fluffier texture.</span></li>
+                    <li><span><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</span></li>
+                    <li><span><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
+                        to ensure the eggs evenly coat the surface.</span></li>
+                    <li><span><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly
+                        runny in the middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
+                    <li><span><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it
+                        over the fillings. Let it cook for another minute, then slide it onto a plate.</span></li>
+                    <li><span><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</span></li>
                 </ol>
                 <hr width="100%" size="1">
                 <h2>Nutrition</h2>
