--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
                 </div>
 
                 <hr width="100%" size="1">
-                <h2>Nutrition</h2>
-                <p>The table below shows nutritional values per serving without the additional fillings.</p>
+                <h2 class="Nutrition-title">Nutrition</h2>
+                <p class="details-table">The table below shows nutritional values per serving without the additional fillings.</p>
                 <table>
                     <tr>
-                        <td>Calories</td>
-                        <td>277kcal</td>
+                        <td class="first-column">Calories</td>
+                        <td class="second-column">277kcal</td>
                     </tr>
                     <tr>
-                        <td>Carbs</td>
-                        <td>0g</td>
+                        <td class="first-column">Carbs</td>
+                        <td class="second-column">0g</td>
                     </tr>
                     <tr>
-                        <td>Protein</td>
-                        <td>20g</td>
+                        <td class="first-column">Protein</td>
+                        <td class="second-column">20g</td>
                     </tr>
                     <tr>
-                        <td>Fat</td>
-                        <td>22g</td>
+                        <td class="first-column">Fat</td>
+                        <td class="second-column">22g</td>
                     </tr>
                 </table>
             </div>
