--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </div>
                 <div class="preparation-card">
                     <div class="preparation-details">
-                        <h3 class="preparation-title">Preparation time</h3>
-                        <ul class="bullet-preparation">
+                        <h3>Preparation time</h3>
+                        <ul>
                             <li><span><b>Total:</b> Approximately 10 minutes</span></li>
                             <li><span><b>Preparation:</b> 5 minutes</span></li>
                             <li><span><b>Cooking:</b> 5 minutes</span></li>
@@ -37,8 +37,8 @@
                     </div>
                 </div>
                 <div class="ingredients">
-                    <h2 class="ingredients-title">Ingredients</h2>
-                    <ul class="bullet-ingredients">
+                    <h2>Ingredients</h2>
+                    <ul>
                         <li><span>2-3 large eggs</span></li>
                         <li><span>Salt, to taste</span></li>
                         <li><span>Pepper, to taste</span></li>
@@ -48,8 +48,8 @@
                 </div>
                 <hr width="100%" size="1">
                 <div class="instructions">
-                    <h2 class="instruction-title">Instructions</h2>
-                    <ol class="list-numbers">
+                    <h2>Instructions</h2>
+                    <ol>
                         <li><span><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until
                                 they are
                                 well mixed. You can add a tablespoon of water or milk for a fluffier texture.</span>
@@ -70,28 +70,29 @@
                         <li><span><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</span></li>
                     </ol>
                 </div>
-
                 <hr width="100%" size="1">
-                <h2 class="Nutrition-title">Nutrition</h2>
-                <p class="details-table">The table below shows nutritional values per serving without the additional fillings.</p>
-                <table>
-                    <tr>
-                        <td class="first-column">Calories</td>
-                        <td class="second-column">277kcal</td>
-                    </tr>
-                    <tr>
-                        <td class="first-column">Carbs</td>
-                        <td class="second-column">0g</td>
-                    </tr>
-                    <tr>
-                        <td class="first-column">Protein</td>
-                        <td class="second-column">20g</td>
-                    </tr>
-                    <tr>
-                        <td class="first-column">Fat</td>
-                        <td class="second-column">22g</td>
-                    </tr>
-                </table>
+                <div class="nutrition">
+                    <h2>Nutrition</h2>
+                    <p >The table below shows nutritional values per serving without the additional fillings.</p>
+                    <table>
+                        <tr>
+                            <td class="first-column">Calories</td>
+                            <td class="second-column">277kcal</td>
+                        </tr>
+                        <tr>
+                            <td class="first-column">Carbs</td>
+                            <td class="second-column">0g</td>
+                        </tr>
+                        <tr>
+                            <td class="first-column">Protein</td>
+                            <td class="second-column">20g</td>
+                        </tr>
+                        <tr>
+                            <td class="first-column">Fat</td>
+                            <td class="second-column">22g</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </main>
