colocando alt na tag img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <div class="recipe-card">
             <div class="food-image">
-                <img src="assets/top-image.png">
+                <img src="assets/top-image.png" alt="Image from menu">
             </div>
             <div class="container">
                 <div class="recipe-name">
