--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="preparation-card">
                     <div class="preparation-details">
-                        <h3>Preparation time</h3>
+                        <p>Preparation time</p>
                         <ul>
                             <li><span><b>Total:</b> Approximately 10 minutes</span></li>
                             <li><span><b>Preparation:</b> 5 minutes</span></li>
